@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.movielib"
     name="Movielib"
-    version="1.4.8"
+    version="1.4.9"
     provider-name="Regss">
     <requires>
         <import addon="xbmc.python" version="2.14.0" />
-        <import addon="service.movielib" version="1.0.2" />
         <import addon="script.module.pil" version="1.1.7" />
     </requires>
     <extension point="xbmc.python.script" library="default.py" />
+    <extension point="xbmc.service" library="service.py" start="login" />
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Synchronizes video library with the Movielib site</summary>
         <summary lang="pl">Synchronizuje bazę video ze stroną Movielib</summary>
