@@ -10,6 +10,14 @@
         <setting type="sep" />
         <setting label="32007" type="bool" id="checkSource" default="true" />
     </category>
+    <category label="32020">
+        <setting label="32021" id="info" type="lsep" />
+        <setting label="32022" id="OnStart" type="bool" default="true" />
+        <setting label="32023" id="OnStop" type="bool" default="true" />
+        <setting label="32024" id="OnScanFinished" type="bool" default="true" />
+        <setting label="32025" id="OnCleanFinished" type="bool" default="true" />
+        <setting label="32026" id="OnWake" type="bool" default="true" />
+    </category>
     <category label="32011">
         <setting label="32002" type="bool" id="notify" default="true" />
         <setting label="32003" type="bool" id="debug" default="false" />
